Prevent navigation from overflowing to right.

--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -1,8 +1,12 @@
 
 .main-nav {
     background:#eee;
-    padding-left:5px;
+    padding-left:0;
     width:100%;
+
+    li:first-child {
+        padding-left:5px;
+    }
 }
 .main-nav a {
     border:0;
